Overflow fixed 	- Now when overflowing, just continues into the dark

--- a/styling.css
+++ b/styling.css
@@ -66,6 +66,8 @@ body {
     margin: 0;
     padding-right: 10px;
     padding-bottom: 10px;
+    overflow-x: scroll;
+    max-width: 100%;
 }
 
 
